--- a/app/src/main/res/layout/element_recycler_swipe.xml
+++ b/app/src/main/res/layout/element_recycler_swipe.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ru.ekr.xml_with_compose.util.swipe_recycler.SwipeHorizontalMenuLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<ru.ekr.swipe_recycler.SwipeHorizontalMenuLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/sml"
@@ -85,4 +85,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-</ru.ekr.xml_with_compose.util.swipe_recycler.SwipeHorizontalMenuLayout>
+</ru.ekr.swipe_recycler.SwipeHorizontalMenuLayout >
