--- a/app/src/main/res/layout/element_recycler_comments.xml
+++ b/app/src/main/res/layout/element_recycler_comments.xml
@@ -74,7 +74,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             tools:text="text_top" />
 
         <TextView
@@ -82,7 +82,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             tools:text="text_bottom" />
     </LinearLayout>
 
