--- a/app/src/main/res/layout/element_recycler_swipe.xml
+++ b/app/src/main/res/layout/element_recycler_swipe.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ru.ekr.swipe_recycler.SwipeHorizontalMenuLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<ru.ekr.swipe_recycler.SwipeHorizontalMenuLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/sml"
@@ -9,7 +9,7 @@
     app:sml_scroller_duration="250">
 
     <FrameLayout
-        android:id="@+id/smMenuViewLeft"
+        android:id="@+id/menu_view_left"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:background="@color/purple_500"
@@ -21,15 +21,15 @@
             android:layout_width="76dp"
             android:layout_height="76dp"
             android:background="@android:color/transparent"
-            app:layout_constraintDimensionRatio="1:1"
+            android:importantForAccessibility="no"
             android:padding="16dp"
             android:src="@drawable/ic_info"
-            app:tint="@color/black"
-            android:importantForAccessibility="no" />
+            app:layout_constraintDimensionRatio="1:1"
+            app:tint="@color/black" />
     </FrameLayout>
 
     <RelativeLayout
-        android:id="@+id/smMenuViewRight"
+        android:id="@+id/menu_view_right"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:background="@android:color/holo_red_dark"
@@ -41,31 +41,27 @@
             android:layout_width="76dp"
             android:layout_height="76dp"
             android:background="@android:color/transparent"
+            android:importantForAccessibility="no"
             android:padding="16dp"
             android:src="@drawable/ic_delete"
-            app:tint="@color/black"
-            android:importantForAccessibility="no" />
+            app:tint="@color/black" />
 
     </RelativeLayout>
 
     <LinearLayout
-        android:id="@+id/smContentView"
+        android:id="@+id/content_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/holo_blue_dark"
-        android:orientation="vertical"
         android:clickable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/text_top"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             tools:text="text_top" />
 
         <TextView
@@ -73,16 +69,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             tools:text="text_bottom" />
-    </LinearLayout>
 
-    <View
-        android:id="@+id/line_horizontal"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:background="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-</ru.ekr.swipe_recycler.SwipeHorizontalMenuLayout >
+        <View
+            android:id="@+id/line_horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_gravity="bottom"
+            android:background="@color/black"
+            android:foregroundGravity="bottom" />
+    </LinearLayout>
+</ru.ekr.swipe_recycler.SwipeHorizontalMenuLayout>
