--- a/app/src/main/res/layout/fragment_xml.xml
+++ b/app/src/main/res/layout/fragment_xml.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fragment_xml"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
