--- a/swipe_recycler/src/main/res/values/attrs.xml
+++ b/swipe_recycler/src/main/res/values/attrs.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="SwipeMenu">
+    <declare-styleable name="SwipeMenuLayout">
         <attr name="sml_scroller_duration" format="integer" />
         <attr name="sml_auto_open_percent" format="float"/>
         <attr name="sml_scroller_interpolator" format="reference"/>
