--- a/app/src/main/res/layout/element_recycler_swipe_exp.xml
+++ b/app/src/main/res/layout/element_recycler_swipe_exp.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ru.ekr.swipe_recycler.SwipeHorizontalMenuLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ru.ekr.swipe_recycler_experimental.SwipeHorizontalMenuLayoutEXP xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/sml"
+    android:id="@+id/smlexp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:sml_auto_open_percent="0.2"
-    app:sml_scroller_duration="250">
+    app:smlexp_auto_open_percent="0.2"
+    app:smlexp_scroller_duration="250">
 
     <FrameLayout
-        android:id="@+id/menu_view_left"
+        android:id="@+id/menu_view_left_smlexp"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:background="@color/purple_500"
@@ -17,7 +17,6 @@
         android:gravity="start">
 
         <ImageView
-            android:id="@+id/image_right"
             android:layout_width="76dp"
             android:layout_height="76dp"
             android:background="@android:color/transparent"
@@ -28,7 +27,7 @@
     </FrameLayout>
 
     <FrameLayout
-        android:id="@+id/menu_view_right"
+        android:id="@+id/menu_view_right_smlexp"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:background="@android:color/holo_red_dark"
@@ -36,7 +35,6 @@
         android:gravity="end">
 
         <ImageView
-            android:id="@+id/image_left"
             android:layout_width="76dp"
             android:layout_height="76dp"
             android:background="@android:color/transparent"
@@ -48,7 +46,7 @@
     </FrameLayout>
 
     <LinearLayout
-        android:id="@+id/content_view"
+        android:id="@+id/content_view_smlexp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/holo_blue_dark"
@@ -56,7 +54,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/text_top"
+            android:id="@+id/text_top_e"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
@@ -64,7 +62,7 @@
             tools:text="text_top" />
 
         <TextView
-            android:id="@+id/text_bottom"
+            android:id="@+id/text_bottom_e"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
@@ -72,11 +70,10 @@
             tools:text="text_bottom" />
 
         <View
-            android:id="@+id/line_horizontal"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_gravity="bottom"
             android:background="@color/black"
             android:foregroundGravity="bottom" />
     </LinearLayout>
-</ru.ekr.swipe_recycler.SwipeHorizontalMenuLayout>
+</ru.ekr.swipe_recycler_experimental.SwipeHorizontalMenuLayoutEXP>
