--- a/app/src/main/res/layout/element_recycler_swipe_exp.xml
+++ b/app/src/main/res/layout/element_recycler_swipe_exp.xml
@@ -49,8 +49,9 @@
         android:id="@+id/content_view_smlexp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/holo_blue_dark"
+        android:background="#6F005AF6"
         android:clickable="true"
+        android:gravity="center"
         android:orientation="vertical">
 
         <TextView
