--- a/swipe_recycler_experimental/src/main/res/values/attrs.xml
+++ b/swipe_recycler_experimental/src/main/res/values/attrs.xml
@@ -5,4 +5,8 @@
         <attr name="smlexp_auto_open_percent" format="float"/>
         <attr name="smlexp_scroller_interpolator" format="reference"/>
     </declare-styleable>
+
+    <declare-styleable name="LinearLayout">
+        <attr name="content_view_smlexp_scroller_interpolator_content" format="reference"/>
+    </declare-styleable>
 </resources>
