feat: Swiper Experimental
Swiper Experimental Проработка

--- a/app/src/main/res/layout/fragment_xml_swiper_exp.xml
+++ b/app/src/main/res/layout/fragment_xml_swiper_exp.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ru.ekr.swipe_recycler_experimental.SwipeMenuRecyclerViewEXP
+    <ru.ekr.swipe_recycler_experimental.SwipeRecyclerViewEXP
       android:id="@+id/recycler_comments_exp"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
