--- a/app/src/main/res/layout/element_recycler_swipe_exp.xml
+++ b/app/src/main/res/layout/element_recycler_swipe_exp.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ru.ekr.swipe_recycler_experimental.SwipeHorizontalMenuLayoutEXP xmlns:android="http://schemas.android.com/apk/res/android"
+<ru.ekr.swipe_recycler_experimental.SwipeMainLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/smlexp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:smlexp_auto_open_percent="0.2"
-    app:smlexp_scroller_duration="250">
+    android:layout_height="wrap_content">
 
     <FrameLayout
         android:id="@+id/menu_view_left_smlexp"
@@ -37,6 +34,7 @@
         <ImageView
             android:layout_width="76dp"
             android:layout_height="76dp"
+            android:layout_gravity="end"
             android:background="@android:color/transparent"
             android:importantForAccessibility="no"
             android:padding="16dp"
@@ -45,36 +43,41 @@
 
     </FrameLayout>
 
-    <LinearLayout
+    <ru.ekr.swipe_recycler_experimental.swiper.SwiperLayout
         android:id="@+id/content_view_smlexp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#6F005AF6"
         android:clickable="true"
-        android:gravity="center"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/text_top_e"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:textColor="@color/black"
-            tools:text="text_top" />
-
-        <TextView
-            android:id="@+id/text_bottom_e"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:textColor="@color/black"
-            tools:text="text_bottom" />
-
-        <View
+        app:sml_auto_open_percent="0.4"
+        android:layout_height="wrap_content">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_gravity="bottom"
-            android:background="@color/black"
-            android:foregroundGravity="bottom" />
-    </LinearLayout>
-</ru.ekr.swipe_recycler_experimental.SwipeHorizontalMenuLayoutEXP>
+            android:layout_height="wrap_content"
+            android:background="@android:color/holo_blue_dark"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/text_top_e"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:textColor="@color/black"
+                tools:text="text_top" />
+
+            <TextView
+                android:id="@+id/text_bottom_e"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:textColor="@color/black"
+                tools:text="text_bottom" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_gravity="bottom"
+                android:background="@color/black"
+                android:foregroundGravity="bottom" />
+        </LinearLayout>
+    </ru.ekr.swipe_recycler_experimental.swiper.SwiperLayout>
+</ru.ekr.swipe_recycler_experimental.SwipeMainLayout>
