--- a/app/src/main/res/layout/element_recycler_swipe_exp.xml
+++ b/app/src/main/res/layout/element_recycler_swipe_exp.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ru.ekr.swipe_recycler_experimental.SwipeMainLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ru.ekr.swipe_recycler_experimental.swipe_layout.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <FrameLayout
-        android:id="@+id/menu_view_left_smlexp"
+        android:id="@+id/menu_left"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:background="@color/purple_500"
         android:clickable="true"
-        android:gravity="start">
+        android:layout_gravity="start">
 
         <ImageView
             android:layout_width="76dp"
@@ -24,12 +24,12 @@
     </FrameLayout>
 
     <FrameLayout
-        android:id="@+id/menu_view_right_smlexp"
+        android:id="@+id/menu_right"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:background="@android:color/holo_red_dark"
         android:clickable="true"
-        android:gravity="end">
+        android:layout_gravity="end">
 
         <ImageView
             android:layout_width="76dp"
@@ -43,41 +43,38 @@
 
     </FrameLayout>
 
-    <ru.ekr.swipe_recycler_experimental.swiper.SwiperLayout
-        android:id="@+id/content_view_smlexp"
+
+    <LinearLayout
+        android:id="@+id/base_content"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/holo_blue_dark"
         android:clickable="true"
-        app:sml_auto_open_percent="0.4"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:layout_width="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/text_top_e"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@android:color/holo_blue_dark"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:padding="10dp"
+            android:textColor="@color/black"
+            tools:text="text_top" />
 
-            <TextView
-                android:id="@+id/text_top_e"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:textColor="@color/black"
-                tools:text="text_top" />
+        <TextView
+            android:id="@+id/text_bottom_e"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:textColor="@color/black"
+            tools:text="text_bottom" />
 
-            <TextView
-                android:id="@+id/text_bottom_e"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:textColor="@color/black"
-                tools:text="text_bottom" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_gravity="bottom"
+            android:background="@color/black"
+            android:foregroundGravity="bottom" />
+    </LinearLayout>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_gravity="bottom"
-                android:background="@color/black"
-                android:foregroundGravity="bottom" />
-        </LinearLayout>
-    </ru.ekr.swipe_recycler_experimental.swiper.SwiperLayout>
-</ru.ekr.swipe_recycler_experimental.SwipeMainLayout>
+</ru.ekr.swipe_recycler_experimental.swipe_layout.SwipeLayout>
