--- a/swipe_recycler_experimental/src/main/res/values/ids.xml
+++ b/swipe_recycler_experimental/src/main/res/values/ids.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="content_view_smlexp" type="id"/>
-    <item name="menu_view_left_smlexp" type="id"/>
-    <item name="menu_view_right_smlexp" type="id"/>
+    <item name="base_content" type="id"/>
+    <item name="menu_left" type="id"/>
+    <item name="menu_right" type="id"/>
 </resources>
