--- a/swipe_recycler_experimental/src/main/res/values/attrs.xml
+++ b/swipe_recycler_experimental/src/main/res/values/attrs.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="SwipeLayout">
-        <attr name="scroller_duration" format="integer" />
-        <attr name="auto_open_ratio" format="float"/>
+    <declare-styleable name="BaseGestureFrameLayout">
+        <attr name="gfl_scroller_duration" format="integer" />
+        <attr name="gfl_auto_open_ratio" format="float"/>
+        <attr name="gfl_left_swipe_enabled" format="boolean"/>
+        <attr name="gfl_right_swipe_enabled" format="boolean"/>
     </declare-styleable>
 </resources>
